# solo

./: .gitignore  aduit审核  idea_history.md  run_all_ideas.sh  run_all_ideas_bg.sh  trae_idea_runner.py  update.py
result/: yzz00152.xlsx  (+68 more)
workspaces/yzz00256/: README.md  pyproject.toml
workspaces/yzz00256/examples/: run_demo.sh
workspaces/yzz00256/examples/batch_partial_failure/: plots.csv  rules.yaml
workspaces/yzz00256/examples/historical_snapshot/: snapshot.json
workspaces/yzz00256/examples/manual_review/: plots.csv  rules.yaml
workspaces/yzz00256/examples/single_success/: plots.csv  rules.yaml
workspaces/yzz00256/output/batch_partial_failure/: detail.csv  report.json  report.md  review_list.csv
workspaces/yzz00256/output/idempotent_test/: detail.csv  report.json  report.md  review_list.csv
workspaces/yzz00256/output/manual_review/: detail.csv  report.json  report.md  review_list.csv
workspaces/yzz00256/output/single_success/: detail.csv  report.json  report.md
workspaces/yzz00256/output/test_batch/: detail.csv  report.json  report.md  review_list.csv
workspaces/yzz00256/output/test_review/: detail.csv  report.json  report.md  review_list.csv
workspaces/yzz00256/output/test_single/: detail.csv  report.json  report.md
workspaces/yzz00256/src/irrigation_scheduler/: __init__.py  cli.py  config_loader.py  console_summary.py  exporter.py  idempotent.py  models.py  scheduler.py
workspaces/yzz00276/: pyproject.toml  requirements.txt
workspaces/yzz00276/examples/: banned_list.csv  field_mapping.json  formula_sample_1.csv  formula_sample_2.csv
workspaces/yzz00276/feed_ban_checker/: __init__.py  checker.py  cli.py  config.py  exporter.py  logger.py  models.py  pipeline.py  reader.py
workspaces/yzz00276/output/: TEST002_坏行.csv  TEST002_差异表.csv  TEST002_成功结果.csv  TEST002_汇总.csv  TEST_DATE_坏行.json  TEST_DATE_差异表.json  TEST_DATE_成功结果.json  TEST_DATE_汇总.json  TEST_XLSX_坏行.xlsx  TEST_XLSX_差异表.xlsx  TEST_XLSX_成功结果.xlsx  TEST_XLSX_汇总.xlsx
workspaces/yzz00276/output/logs/: TEST002_操作日志.json  TEST_DATE_操作日志.json  TEST_XLSX_操作日志.json
workspaces/yzz00278/: pyproject.toml
workspaces/yzz00278/examples/: field_mapping.json  sample_good.csv  sample_mixed.csv
workspaces/yzz00278/gym_scheduler/: cli.py  exporter.py  generator.py  loader.py  models.py  reviewer.py  validator.py
workspaces/yzz00278/output/: bad_records_20260607_133242.csv  bad_records_20260607_224340.csv  diff_20260607_133242.csv  diff_20260607_224340.csv  operation_log_20260607_133242.json  operation_log_20260607_224340.json  schedules_20260607_133242.csv  schedules_20260607_224340.csv
workspaces/yzz00278/output/.store/: batch_log.json  schedules.json
workspaces/yzz100363/: debug_parser.py  pyproject.toml  requirements.txt  test_parser.py
workspaces/yzz100363/examples/: references.bib  references_mixed.txt
workspaces/yzz100363/output/: cleaned.bib  cleaned_bibtex.bib  cleaned_references.txt  report.json  report.txt  report_bibtex.txt  run2.txt
workspaces/yzz100363/src/refcleaner/: __init__.py  cli.py  doi_normalizer.py  duplicate_detector.py  formatter.py  models.py  parsers.py  pipeline.py  report.py  validator.py
workspaces/yzz100363/tests/: test_doi_normalizer.py  test_duplicate_detector.py  test_pipeline.py
workspaces/yzz100429/: debug.db  pyproject.toml  requirements.txt  test_parse.py  test_tournament.db
workspaces/yzz100429/badminton_verify/: cli.py  database.py  exporter.py  models.py  reader.py  service.py  utils.py
workspaces/yzz100429/output/: 2026杯赛_分组检录.xlsx  2026杯赛_异常报告.xlsx  2026杯赛_待联系.xlsx  2026杯赛_确认名单.xlsx
workspaces/yzz100429/test_data/: 01_表单报名.xlsx  02_微信群报名.xlsx  03_俱乐部代报.xlsx  04_缴费记录.xlsx  05_组别规则.xlsx
workspaces/yzz100439/: pyproject.toml  sample_fuel.csv  sample_mileage.csv  sample_shift.csv
workspaces/yzz100439/.fuel_recon_store/: last_reconcile.json  store.json
workspaces/yzz100439/fuel_recon/: __init__.py  cli.py  exporter.py  importer.py  models.py  reconciler.py
workspaces/yzz100439/output/: 可报销汇总_20260613_002827.csv  可报销汇总_20260613_002827.summary.csv  审计报告_20260613_002838.csv  待解释清单_20260613_002826.csv
workspaces/yzz100439/tests/: test_reconcile.py
workspaces/yzz100453/: _gen_test_data.py  _run_scan_test.py  _test_report_archive.py  pyproject.toml  requirements.txt  sample-config.yaml  test-config.yaml
workspaces/yzz100453/test-report/: 完整报告.md  待补清单.csv
yzz100301/repo/yzz100320/: pyproject.toml  report.csv  report.json
yzz100304/: pyproject.toml
yzz100304/examples/: decommission.csv  hoist_loads.csv  lending.csv  returns_batch2.json
yzz100304/stagelend/: __init__.py  audit.py  cli.py  core.py  database.py  report.py  review.py  utils.py
yzz100304/stagelend/importers/: __init__.py  decommission.py  returns.py
(+6375 files in other folders)
