[project]
name = "feed-ban-checker"
version = "1.0.0"
description = "饲料配方禁用料检查CLI工具"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "pandas>=1.3",
    "openpyxl>=3.0",
]

[project.scripts]
feed-ban-checker = "feed_ban_checker.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["feed_ban_checker*"]
