[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "refcleaner"
version = "0.1.0"
description = "参考文献清洗补全工具 - 规范DOI、去重、按格式输出"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "RefCleaner Team" }]
license = { text = "MIT" }
dependencies = [
    "bibtexparser>=1.4.1",
    "rapidfuzz>=3.6.0",
    "click>=8.1.7",
    "pydantic>=2.6.0",
]

[project.scripts]
refcleaner = "refcleaner.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
